--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,5 @@ datasources:
 jpa.default.properties.hibernate.hbm2ddl.auto: update
 jpa.default.properties.hibernate.show_sql: true
 jpa.default.properties.hibernate.format_sql: true
+
+analise.url: ${ANALISE_URL:`http://localhost:9999/api/solicitacao`}
