030.associar_cartao_proposta

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,4 @@ jpa.default.properties.hibernate.show_sql: true
 jpa.default.properties.hibernate.format_sql: true
 
 analise.url: ${ANALISE_URL:`http://localhost:9999/api/solicitacao`}
+cartao.url: ${CARTAO_URL:`http://localhost:8888/api/cartoes`}
